[package]
name = "crafting-interpreters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive"] }
lazy_static = "1.4.0"

[features]
debug = []
debug_trace_execution = ["debug"]
debug_print_code = ["debug"]
